# ResearchGPT

./: .gitignore  Dockerfile  LICENSE  README.md  app.sh  certbot.sh  config.ini.example  docker-compose.yaml  docker-compose.yml  init-letsencrypt.sh  logging.conf  main.py  nginx.conf  openapi.json  pyproject.toml  requirements.txt
app/: __init__.py  apis.py  auth.py  chatroom.py  config.py  dependencies.py  exceptions.py  globals.py  logger.py  main.py  middlewares.py  researchgpt.py  utils.py  websockets.py
client/: .eslintrc.cjs  .gitignore  index.html  package-lock.json  package.json  postcss.config.cjs  prettier.config.js  svelte.config.js  tailwind.config.cjs  tsconfig.json  vite.config.ts
client/src/: App.svelte  app.css
client/src/lib/apis/: chatrooms.ts  home.ts
client/src/lib/components/: Dots.svelte  Message.svelte  RepresentativeArticlesTable.svelte
client/src/lib/pages/: Assisstant.svelte  Home.svelte
config/: .env.example  config.ini.example  logging.conf
database/: __init__.py  dataclasses.py  models.py  mysql.py  redis.py  repository.py  schemas.py  singleton.py  utils.py
gpt/: buffer.py  cache_manager.py  commands.py  common.py  config.py  generation.py  llama_cpp.py  message_handler.py  message_manager.py  models.py  pubmed.py  sample.py  stream_manager.py  tokenizers.py  vectorstore_manager.py  websocket_manager.py
nginx/: app.conf  gpt.conf  nginx.conf
prompts/: chat-agent.txt
pubtrawlr/: __init__.py
server/: certbot.sh  docker-compose.yaml  pyproject.toml
server/app/: __init__.py  exceptions.py
server/config/: .env.example
server/database/: __init__.py  dataclasses.py
server/gpt/: message_handler.py  message_manager.py  stream_manager.py  tokenizers.py  vectorstore_manager.py
tests/: conftest.py  test_gpt.py  test_vectorstore.py
(+21 files in other folders)
