[tool.poetry]
name = "research gpt"
version = "0.1.0"
description = "An AI assistant to help you with your research on various topics with data from PubMed API"
authors = ["Megham Garg <meghamgarg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.1"
colorama = "^0.4.6"
psutil = "^5.9.4"
tqdm = "^4.64.1"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
openai = "^0.27.0"
tiktoken = "^0.2.0"
black = "^23.3.0"
isort = "^5.12.0"
configparser = "^5.3.0"
sqlalchemy = "^2.0.12"
langchain = "^0.0.161"
mysql-connector-python = "^8.0.33"
sse-starlette = "^1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
