[tool.poetry]
name = "research gpt"
version = "0.1.0"
description = "An AI assistant to help you with your research on various topics with data from PubMed API"
authors = ["Megham Garg <meghamgarg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.1"
colorama = "^0.4.6"
psutil = "^5.9.4"
tqdm = "^4.64.1"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
openai = "^0.27.0"
tiktoken = "^0.2.0"
black = "^23.3.0"
isort = "^5.12.0"
configparser = "^5.3.0"
sqlalchemy = "^2.0.12"
langchain = "^0.0.161"
mysql-connector-python = "^8.0.33"
sse-starlette = "^1.5.0"
redis = "^4.5.5"
orjson = "^3.8.12"
transformers = "^4.29.1"
unstructured = "^0.6.6"
httpx = "^0.24.0"
sentencepiece = "^0.1.99"
llama-cpp-python = "^0.1.49"
tabulate = "^0.9.0"
pdf2image = "^1.16.3"
pytesseract = "^0.3.10"
sqlalchemy-utils = "^0.41.1"
aiomysql = "^0.1.1"
websockets = "^11.0.3"
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
